# command-robot-base

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.gradle  config.ini  config.toml  package-lock.json  package.json  requirements.txt  settings.gradle  tsconfig.json
.cargo/: config.toml
.cursor/rules/: backend.mdc  deployment.mdc  java.mdc  structure.mdc
.wpilib/: wpilib_preferences.json
config/main/: index.ts
config/schema/: common.thrift  config.thrift
docs/: HowToInitialize.md  SourceBuildingPlugin.md  SparkMaxDocs.md
scripts/: backend.sh  clone_and_build_repos.py
scripts/clone_and_build/: clone_and_build_repos.gradle
scripts/config-generation/: compile-config.ts  thrift-to-ts.js
src/backend/: deploy.py
src/backend/deployment/: bundler.py  compilation_util.py  deployer.py  processes.py  rsyncer.py  system_types.py  util.py
src/backend/deployment/compilation/cpp/: Dockerfile  compile.bash  cpp.py
src/backend/deployment/compilation/rust/: Dockerfile  compile.bash  rust.py
src/backend/deployment/compilation/util/: commands.py  cpp_build.py  parsing.py  systems.py
src/backend/deployment/gradle/: build.gradle  build.gradle.kts
src/backend/deployment/misc/: output.py
src/backend/deployment/module/: base.py  supported.py
src/backend/deployment/network_api/: system_api.py  utils.py  zeroconf.py
src/backend/python/: rules.mdc
src/backend/python/common/: config.py  constants.py
src/backend/python/common/__tests__/: test_all.py  test_autobahn_replay.py  test_config.py  test_math.py  test_replay.py  test_system.py
src/backend/python/common/camera/: __init__.py  image_utils.py  (+2 more)
src/backend/python/test/: __main__.py
src/backend/rust/common/: Cargo.toml  build.rs
src/backend/rust/common/fixtures/: sample_config.txt
src/backend/rust/common/src/: config.rs  device_info.rs  lib.rs  math.rs
src/backend/rust/common/src/math/: proto_to_nalgebra.rs  thrift_to_nalgebra.rs
src/config/: index.ts
src/config/april_tags_detection/: index.ts
src/config/cameras/: logitech_cam.ts  prod_1.ts
src/config/lidar/: index.ts
src/config/pathfinding/: index.ts
src/config/pos_extrapolator/: index.ts
src/config/pos_extrapolator/april_tag_det_config/: index.ts
src/config/pos_extrapolator/imu_config/: navx.ts
src/config/pos_extrapolator/kalman_filter_config/: index.ts
src/config/pos_extrapolator/message_config/: index.ts
src/config/pos_extrapolator/odom_config/: swerve_odom.ts
src/config/pos_extrapolator/tag_config/: comp_lab.ts  example_tag_config.ts  reefscape.ts
src/config/util/: map.ts  math.ts  struct.ts
src/main/deploy/: config  example.txt
vendordeps/: NavX.json  Phoenix5-5.35.1.json  Phoenix6-25.2.2.json  REVLib-2025.0.2.json  photonlib.json
(+51 files in other folders)
