[workspace]
members = ["src/backend/rust/*"]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
prost = "0.13.5"
bytes = "1.5"
url = "2.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.171"
cxx = "1.0.150"
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", default-features = false, features = [
  "serde-serialize",
] }
nalgebra25 = { package = "nalgebra", version = "0.25.4" }
rstar = "0.12.2"
dbscan = "0.3.1"
image = "0.25.6"
clap = { version = "4.5", features = ["derive"] }
thrift = "0.17"
prost-build = "0.13.5"
unitree-lidar-l1-rust = "0.1.0"
autobahn-client = "0.1"
ctor = "0.1"

[workspace.metadata]
rust-project = { path = "backend/rust" }
