# this is the build file for Rust language. See #.cargo/ folder for more specific configuration flags
# read more about the workspace here: https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = ["src/backend/rust/*"]

# dependencies for the rust workspace. This is a list of dependencies that are shared by all the rust modules in the workspace.
[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
prost = "0.13.5"
nalgebra = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
serde_json = "1.0"
url = "2.5"
thrift = "0.17"
base64 = "0.21"
ordered-float = "4.0"
prost-build = "0.13.5"


[workspace.metadata]
rust-project = { path = "backend/rust" }
