# this is the build file for Rust language. See #.cargo/ folder for more specific configuration flags
# read more about the workspace here: https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
members = ["src/backend/rust/*"]

# dependencies for the rust workspace. This is a list of dependencies that are shared by all the rust modules in the workspace.
[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3"
nalgebra = "0.34.2"
