[package]
name = "common-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
prost = "0.13.5"
nalgebra = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
serde_json = "1.0"
url = "2.5"
thrift = "0.17"
base64 = "0.21"
ordered-float = "4.0"
prost-build = "0.13.5"

[build-dependencies]
prost-build = "0.13.5"
thrift = "0.17"
walkdir = "2.4.0"
regex = "1.11.1"
